RESOLVED FIXED28305
When Geolocation permissions are denied, watchers are not stopped
https://bugs.webkit.org/show_bug.cgi?id=28305
Summary When Geolocation permissions are denied, watchers are not stopped
Steve Block
Reported 2009-08-14 07:57:50 PDT
Currently, when Geolocation permissions are denied, only one-shots are stopped. Since permissions can not be revoked within the lifetime of the page, all requests (both one-shots and watchers) will never obtain a position fix once permissions have been denied. We should therefore stop all requests when permissions are denied.
Attachments
Patch 1 for bug 28305 (11.96 KB, patch)
2009-09-09 02:38 PDT, Steve Block
darin: review+
eric: commit-queue-
Steve Block
Comment 1 2009-09-08 10:49:25 PDT
The refactoring required for Bug 29040 requires this bug to be fixed first.
Steve Block
Comment 2 2009-09-09 02:38:41 PDT
Created attachment 39256 [details] Patch 1 for bug 28305 Fixes the bug and adds tests.
Eric Seidel (no email)
Comment 3 2009-09-09 08:24:36 PDT
Comment on attachment 39256 [details] Patch 1 for bug 28305 Rejecting patch 39256 from commit-queue. benm@google.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py.
Ben Murdoch
Comment 4 2009-09-09 08:46:23 PDT
(In reply to comment #3) > (From update of attachment 39256 [details]) > Rejecting patch 39256 from commit-queue. > > benm@google.com does not have committer permissions according to > http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py. Hmm, not sure what happened there. I'm on line 50 of that script? Will land manually.
Ben Murdoch
Comment 5 2009-09-09 09:04:17 PDT
Landed as r48209.
Note You need to log in before you can comment on or make changes to this bug.