WebCore: When Geolocation permission is denied, stops watches as well as one-shots. https://bugs.webkit.org/show_bug.cgi?id=28305.

Patch by Steve Block <steveblock@google.com> on 2009-09-09
Reviewed by Darin Adler.

Tests: fast/dom/Geolocation/watch.html
       fast/dom/Geolocation/permission-denied-stops-watches.html

* page/Geolocation.cpp: Modified.
(WebCore::Geolocation::setIsAllowed): Modified. Marks the permission error as fatal.
(WebCore::Geolocation::handleError): Modified. If the error is fatal, stops watchers as well as one-shots.
* page/PositionError.h: Modified.
(WebCore::PositionError::setIsFatal): Added. Marks an error as fatal.
(WebCore::PositionError::isFatal): Added. Determines whether an error is fatal.

LayoutTests: When Geolocation permission is denied, stops watches as well as one-shots.
https://bugs.webkit.org/show_bug.cgi?id=28305.

Patch by Steve Block <steveblock@google.com> on 2009-09-09
Reviewed by Darin Adler.

* fast/dom/Geolocation/resources/watch.js: Added. Tests that a watch correctly reports updates from the Geolocation service.
* fast/dom/Geolocation/watch.html: Added. Wrapper for above test.
* fast/dom/Geolocation/watch-expected.txt: Added. Expected result for above test.
* fast/dom/Geolocation/resources/permission-denied-stops-watches.js: Added. Tests that when Geolocation permission is denied, watches are stopped, as well as one-shots.
* fast/dom/Geolocation/permission-denied-stops-watches.html: Added. Wrapper for above test.
* fast/dom/Geolocation/permission-denied-stops-watches-expected.txt: Added. Expected result for above test.



Canonical link: https://commits.webkit.org/39778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48209 268f45cc-cd09-0410-ab3c-d52691b4dbfc