WebCore/page/Geolocation.cpp
@@ -145,7 +145,8 @@ void Geolocation::setIsAllowed(bool allowed)
         startTimers();
         makeSuccessCallbacks();
     } else {
-        WTF::RefPtr<WebCore::PositionError> error = WebCore::PositionError::create(PositionError::PERMISSION_DENIED, "User disallowed Geolocation");
+        RefPtr<PositionError> error = PositionError::create(PositionError::PERMISSION_DENIED, "User disallowed Geolocation");
+        error->setIsFatal(true);
         handleError(error.get());
     }
 }
@@ -249,6 +250,8 @@ void Geolocation::handleError(PositionError* error)
     sendErrorToWatchers(error);
 
     m_oneShots.clear();
+    if (error->isFatal())
+        m_watchers.clear();
 
     if (!hasListeners())
         m_service->stopUpdating();
